--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStep2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStep2.vm
@@ -34,7 +34,7 @@ $(function(){
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -154,7 +154,7 @@ $(function(){
             </div>
         </div>
     </div>
-    <div class="footer footer-simple">
+  <!--  <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -173,7 +173,7 @@ $(function(){
             </ul>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
 
 <!----------弹层--start----------->
