--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/createAccount2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/createAccount2.vm
@@ -3,25 +3,7 @@
     <title>幼富通</title>
 </head>
 <body>
-   <div id="page">
-        <div id="header">
-            <div class="topNav">
-                <div class="container">
-                    <div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-                    <div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
-                </div>
-            </div>
-            <div class="container">
-                <a href="#" class="logo"></a>
-                <div class="nav">
-                    <a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-                </div>
-            </div>
-        </div>
-        
+ 
         <div id="body">
             <div class="container">
                 <div class="u2 mt20">
@@ -51,7 +33,7 @@
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd}) #else 6-20个大小写英文字母、符号或数字 #end</span>
                               <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd_family}</span>
                                     </li>
-                                    <li #if($!{errMsg_pswpwd2_family})class="error" #end>
+                                    <li #if($errMsg_pswpwd2_family)class="error" #end>
                                         <span class="form-title">重复输入</span>
                                         <input class="ipt-password2 input-text" type="password" name="loginpwd2" id="loginpwd2" value="$!{CustinfoVo.loginpwd2}">
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.loginpwd2}) #else 请再次输入密码 #end</span>
@@ -69,7 +51,7 @@
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd}) #else 6-20个大小写英文字母、符号或数字 #end </span>
                                       <span class="tips-check"><i class="icon"></i>$!{errmsg_tradepwd_family}</span>
                                     </li>
-                                    <li #if($!{errMsg_tradepwd2_family}) class="error" #end>
+                                    <li #if($errMsg_tradepwd2_family) class="error" #end>
                                         <span class="form-title">重复输入</span>
                                         <input class="ipt-tradepwd2 input-text" type="password"  name="tradepwd2" id="tradepwd2" value="$!{CustinfoVo.tradepwd2}">
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.tradepwd2}) #else 请再次输入密码 #end </span>
@@ -87,7 +69,7 @@
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.invnm}) #else 请填写家长姓名 #end </span>
                                         <span class="tips-check"><i class="icon">$!{errMsg_invnm_family}</i></span>
                                     </li>
-                                    <li #if(${errMsg_idno_family}) class="error" #end>
+                                    <li #if($errMsg_idno_family) class="error" #end>
                                         <span class="form-title">身份证号码</span>
                                         <input class="ipt-idCard input-text" type="text" name="idno" id="idno" maxlength="18" value="$!{CustinfoVo.idno}">
                                         <span class="tips-normal" style="display: block;">#if(${CustinfoVo.idno}) #else 请填写身份证号码 #end </span>
@@ -105,13 +87,7 @@
           </div>
         </div>
     </div>
- <div class="LowFoot">
-    <div class="inner">
-        <div class="contentFoot">
-            幼富通版权所有 ©2014 沪ICP备14054347号
-        </div>
-    </div>
-</div>
+ 
 <script type="text/javascript" src="${staticDomain}/static/family/scripts/load.js"></script>
 <script type="text/javascript" src="${staticDomain}/static/family/scripts/register.js"></script>    
 <script >
