--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/ufb.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/account/ufb.vm
@@ -21,6 +21,16 @@ $(function(){
 		$("#form").submit();
 	});
 		
+	$("#addBankCard").on("click",function(){
+		var cardcount=$(".cBlue").html();
+		if(cardcount>=2){
+			alert("对不起，您最多只能添加两张银行卡");
+			return false;
+		}
+		window.open("${staticDomain}/family/addBankCard.htm","_blank");
+		//$("#addBankCard").attr("href","${staticDomain}/family/addBankCard.htm").click();
+	});
+	
 	$("#showYield").html("7日年化收益率（%)"+ parseFloat('${hftFundInfo.yield}').toFixed(4)+"");
 	$("#showIncome").html("万份收益（元）"+ parseFloat('${hftFundInfo.income}').toFixed(4) +"");
 
@@ -28,25 +38,7 @@ $(function(){
 </script>
 </head>
 <body>
-<div id="page">
-    <div id="header">
-		<div class="topNav">
-			<div class="container">
-				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
-			</div>
-		</div>
-        <div class="container">
-            <a href="#" class="logo"></a>
-			<div class="nav">
-				<a href="${staticDomain}/family/session.htm">我的账户</a>
-				<a href="${staticDomain}/family/myufb.htm" class="active">幼富宝</a>
-				<a href="#">缴费明细</a>
-				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
-			</div>
-        </div>
-    </div>
-    
+ 
     <div id="body">
 		<form id="form" method="post" action="${staticDomain}/family/query_index.htm">
 			<input type="hidden" id="serialno" name="serialno" value="">
@@ -56,7 +48,7 @@ $(function(){
 			     <div class="addCard">
                     银行卡已添加<span class="cBlue">$!{hft_family_trade_size}</span>张
 					<a href="${staticDomain}/family/settingCard.htm" class="readAll">查看全部</a>
-					<a href="${staticDomain}/family/addBankCard.htm">+新卡</a>
+					<a href="#" id="addBankCard">+新卡</a>
                  </div>
 			</div>
 			<div class="a2 width928">
@@ -155,14 +147,7 @@ $(function(){
     </div>
 	</form>
 </div>
-<div class="LowFoot">
-    <div class="inner">
-        <div class="contentFoot">
-            幼富通版权所有 ©2014 沪ICP备14054347号
-        </div>
-    </div>
-</div>
-
+ 
 <script type="text/javascript">
         // 路径配置
         require.config({
