--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepS2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoFundStepS2.vm
@@ -32,7 +32,7 @@ $(function(){
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -128,7 +128,7 @@ $(function(){
         </div>
     </div>
 </div>
-    <div class="footer footer-simple">
+  <!--   <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -147,7 +147,7 @@ $(function(){
             </ul>
             </div>
         </div>
-    </div>
+	</div>-->
     </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 <script src="${staticDomain}/js/scripts/register.js"></script>
