--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/helpFee.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/helpFee.vm
@@ -4,12 +4,12 @@
     <title>幼富通 - 帮助中心 - 缴费退费</title>
 </head>
 <body>
-<div class="container help">
+   <div class="container help">
      <div id="header">
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -21,7 +21,7 @@
 				<a href="${staticDomain}/family/helpAbout.htm">帮助中心</a>
 			</div>
         </div>
-    </div>
+	 </div> 
     <div class="body">
         <div class="inner clearfix">
             <div class="title">
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-     <div class="footer footer-simple">
+    <!--  <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -85,7 +85,7 @@
             </ul>
         </div>
     </div>
-</div>
+	</div>-->
 </div>
 <script src="${staticDomain}/static/family/scripts/load.js"></script>
 </body>
