--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/query_detail.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/query_detail.vm
@@ -17,7 +17,7 @@
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -100,13 +100,13 @@
                     </div>
                 </div>
                 <div class="detail-btn clearfix">
-                    <a href="javascript;;" onclick="window.history.go(-1)" class="btn off fl">返回</a>
+                    <a href="#" onclick="window.history.go(-1);return fasle" class="btn off fl">返回</a>
                 </div>
             </div>
         </div>
     </div>
 	</form>
-	    <div class="footer footer-simple">
+	<!--     <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -125,7 +125,7 @@
             </ul>
         </div>
     </div>
-</div>
+	</div>-->
 </div>
 <script src="${staticDomain}/static/family/scripts/load.js"></script>
 <script src="${staticDomain}/static/family/scripts/register.js"></script>
