--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingCard.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingCard.vm
@@ -57,7 +57,7 @@ $(function(){
 			alert("对不起，您最多只能添加两张银行卡！");
 			return false;
 		}
-			$("#form-settingCard").attr("action", "../$family/addBankCard.htm");
+			$("#form-settingCard").attr("action", "../family/addBankCard.htm");
 			$("#form-settingCard").submit();
 		
 	});
@@ -71,7 +71,7 @@ $(function(){
 		<div class="topNav">
 			<div class="container">
 				<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-				<div class="b2"><span>柔软的大牛</span><a href="#"></a></div>
+				<div class="b2"><span>柔软的大牛</span><a href="${staticDomain}/family/settingAccount.htm"></a></div>
 			</div>
 		</div>
         <div class="container">
@@ -123,7 +123,7 @@ $(function(){
     							<span>尾号：$tailStr.substring($start,$end)</span>
     						</div>
                             <div class="card-setting">
-								<span>*幼富宝</span>
+							        #if($!{card.clevel}=="2")	<span>*幼富宝 </span> #end
         							#if($!{card.mainflag}!="Y")
         							<a bankacco="${card.bankacco}" class="set-main" href="javascript:;">设为主卡</a>
         							#end
@@ -164,7 +164,7 @@ $(function(){
         </div>
     </div>
 	</form>
-	    <div class="footer footer-simple">
+	  <!--  <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -183,7 +183,7 @@ $(function(){
             </ul>
         </div>
     </div>
-</div>
+	</div>-->
 </div>
 <script src="${staticDomain}/static/family/scripts/load.js"></script>
 <script type="text/javascript">
