--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/settingPassword.vm
@@ -307,7 +307,7 @@ $(function(){
             </div>
         </div>
     </div>
-	 <div class="footer footer-simple">
+	<!--  <div class="footer footer-simple">
     <div class="inner clearfix">
         <div class="logo fl">
             <img src="${staticDomain}/static/family/images/logo_130x55.png">
@@ -326,7 +326,7 @@ $(function(){
             </ul>
         </div>
     </div>
-</div>
+	</div>-->
 </div>
 <script src="${staticDomain}/static/family/scripts/load.js"></script>
 <script src="${staticDomain}/static/family/scripts/register.js"></script>
